fix z-index

--- a/assets/css/new-index.css
+++ b/assets/css/new-index.css
@@ -130,6 +130,7 @@ footer a {
     margin-top: -22vw;
     font-size: 5vw;
     border: hidden;
+    z-index: 9999;
 }
 
 .btn-warning .badge,
